@@ -7,14 +7,14 @@ LDADD = $(top_builddir)/src/libHepMC.la
 # Identify executables needed during testing:
 check_PROGRAMS = testSimpleVector testUnits testPrintBug \
                  testHepMC testHepMCIteration testMass \
-                 testMultipleCopies testStreamIO
+                 testMultipleCopies testStreamIO testFlow
 
 check_SCRIPTS = testHepMC.sh testHepMCIteration.sh testPrintBug.sh \
-                testMass.sh testStreamIO.sh
+                testMass.sh testStreamIO.sh testFlow.sh
 
 # Identify test(s) to run when 'make check' is requested:
 TESTS = testSimpleVector testUnits \
-        testHepMC.sh testHepMCIteration.sh testMass.sh testStreamIO.sh \
+        testHepMC.sh testHepMCIteration.sh testMass.sh testFlow.sh testStreamIO.sh \
         testPrintBug.sh testMultipleCopies
 
 # Identify the test(s) for which failure is the intended outcome:
@@ -23,6 +23,7 @@ XFAIL_TESTS =
 # Identify the dependencies on a per-test basis:
 testSimpleVector_SOURCES   = testSimpleVector.cc
 testUnits_SOURCES          = testUnits.cc
+testFlow_SOURCES           = testFlow.cc
 testHepMC_SOURCES          = testHepMC.cc testHepMCMethods.cc
 testMass_SOURCES           = testMass.cc
 testStreamIO_SOURCES       = testStreamIO.cc testHepMCMethods.cc
@@ -40,6 +41,7 @@ EXTRA_DIST = testIOGenEvent.input \
 	     testHepMC.dat \
 	     testHepMCIteration.dat \
 	     testMass1.dat \
+	     testFlow.output \
 	     testStreamIOVarious.dat
 
 # Identify generated file(s) to be removed when 'make clean' is requested:
@@ -54,4 +56,5 @@ CLEANFILES = testHepMC.cout testStreamIO.cout \
 	     testMultipleOriginals.out testUnits.out \
 	     testCrossSection.out testCrossSection2.out \
 	     testStreamIO.out testStreamIOParticle.out testStreamIOVarious.out \
-	     testStreamIO2.out testStreamIOprecision.out testStreamIO.cout
+	     testStreamIO2.out testStreamIOprecision.out testStreamIO.cout \
+	     testFlow.out testFlow.out1 testFlow.out2 testFlow.out3
