@@ -19,10 +19,10 @@ NORMAL_UNINSTALL = :
 check_PROGRAMS = testSimpleVector$(EXEEXT) testUnits$(EXEEXT) \
 	testPrintBug$(EXEEXT) testHepMC$(EXEEXT) \
 	testHepMCIteration$(EXEEXT) testMass$(EXEEXT) \
-	testMultipleCopies$(EXEEXT) testStreamIO$(EXEEXT)
+	testMultipleCopies$(EXEEXT) testStreamIO$(EXEEXT) testFlow$(EXEEXT)
 TESTS = testSimpleVector$(EXEEXT) testUnits$(EXEEXT) testHepMC.sh \
 	testHepMCIteration.sh testMass.sh testStreamIO.sh testPrintBug.sh \
-	testMultipleCopies$(EXEEXT)
+	testMultipleCopies$(EXEEXT) testFlow.sh
 XFAIL_TESTS =
 subdir = test
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
@@ -31,7 +31,7 @@ DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/testMass.cc.in $(srcdir)/testMass.sh.in \
 	$(srcdir)/testStreamIO.cc.in $(srcdir)/testStreamIO.sh.in \
 	$(srcdir)/testMultipleCopies.cc.in \
-	$(srcdir)/testPrintBug.sh.in
+	$(srcdir)/testPrintBug.sh.in $(srcdir)/testFlow.sh.in
 
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -41,13 +41,16 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_CLEAN_FILES = testHepMC.cc testMass.cc testHepMCIteration.cc \
 	testMultipleCopies.cc testStreamIO.cc \
 	testHepMC.sh testMass.sh testHepMCIteration.sh testPrintBug.sh \
-	testStreamIO.sh
+	testStreamIO.sh testFlow.sh
 am_testHepMC_OBJECTS = testHepMC.$(OBJEXT) testHepMCMethods.$(OBJEXT)
 testHepMC_OBJECTS = $(am_testHepMC_OBJECTS)
 testHepMC_DEPENDENCIES = $(top_builddir)/src/HepMC.lib
 am_testHepMCIteration_OBJECTS = testHepMCIteration.$(OBJEXT)
 testHepMCIteration_OBJECTS = $(am_testHepMCIteration_OBJECTS)
 testHepMCIteration_DEPENDENCIES = $(top_builddir)/src/HepMC.lib
+am_testFlow_OBJECTS = testFlow.$(OBJEXT)
+testFlow_OBJECTS = $(am_testFlow_OBJECTS)
+testFlow_DEPENDENCIES = $(top_builddir)/src/HepMC.lib
 am_testMass_OBJECTS = testMass.$(OBJEXT)
 testMass_OBJECTS = $(am_testMass_OBJECTS)
 testMass_DEPENDENCIES = $(top_builddir)/src/HepMC.lib
@@ -77,12 +80,14 @@ SOURCES = $(testHepMC_SOURCES) \
 	$(testHepMCIteration_SOURCES) $(testMass_SOURCES) \
 	$(testMultipleCopies_SOURCES) $(testPrintBug_SOURCES) \
 	$(testStreamIO_SOURCES) \
-	$(testSimpleVector_SOURCES) $(testUnits_SOURCES)
+	$(testSimpleVector_SOURCES) $(testUnits_SOURCES) \
+	$(testFlow_SOURCES)
 DIST_SOURCES = $(testHepMC_SOURCES) \
 	$(testHepMCIteration_SOURCES) $(testMass_SOURCES) \
 	$(testMultipleCopies_SOURCES) $(testPrintBug_SOURCES) \
 	$(testStreamIO_SOURCES) \
-	$(testSimpleVector_SOURCES) $(testUnits_SOURCES)
+	$(testSimpleVector_SOURCES) $(testUnits_SOURCES) \
+	$(testFlow_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(EXTRA_DIST)
@@ -151,13 +156,14 @@ LDADD = $(top_builddir)/src/HepMC.lib \
 # how to specify output file
 OUTFLAG = /Fo$@
 check_SCRIPTS = testHepMC.sh testHepMCIteration.sh testPrintBug.sh \
-                testMass.sh testStreamIO.sh
+                testMass.sh testStreamIO.sh testFlow.sh
 
 
 # Identify the dependencies on a per-test basis:
 testSimpleVector_SOURCES = testSimpleVector.cc
 testUnits_SOURCES = testUnits.cc
 testHepMC_SOURCES = testHepMC.cc testHepMCMethods.cc
+testFlow_SOURCES = testFlow.cc
 testMass_SOURCES = testMass.cc
 testStreamIO_SOURCES = testStreamIO.cc testHepMCMethods.cc
 testHepMCIteration_SOURCES = testHepMCIteration.cc
@@ -168,6 +174,7 @@ testPrintBug_SOURCES = testPrintBug.cc
 testSimpleVector_LDADD = $(top_builddir)/src/HepMC.lib
 testUnits_LDADD = $(top_builddir)/src/HepMC.lib
 testHepMC_LDADD = $(top_builddir)/src/HepMC.lib
+testFlow_LDADD = $(top_builddir)/src/HepMC.lib
 testMass_LDADD = $(top_builddir)/src/HepMC.lib
 testStreamIO_LDADD = $(top_builddir)/src/HepMC.lib
 testHepMCIteration_LDADD = $(top_builddir)/src/HepMC.lib
@@ -184,6 +191,7 @@ EXTRA_DIST = testIOGenEvent.input \
 	     testHepMC.dat \
 	     testHepMCIteration.dat \
 	     testMass1.dat \
+	     testFlow.output \
 	     testStreamIOVarious.dat
 
 
@@ -199,7 +207,8 @@ CLEANFILES = testHepMC.cout testStreamIO.cout \
 	     testMultipleOriginals.out testUnits.out \
 	     testCrossSection.out testCrossSection2.out \
 	     testStreamIO.out testStreamIOParticle.out testStreamIOVarious.out \
-	     testStreamIO2.out testStreamIOprecision.out testStreamIO.cout
+	     testStreamIO2.out testStreamIOprecision.out testStreamIO.cout \
+	     testFlow.out testFlow.out1 testFlow.out2 testFlow.out3 
 
 all: all-am
 
@@ -234,6 +243,8 @@ testMultipleCopies.cc: $(top_builddir)/config.status $(srcdir)/testMultipleCopie
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 testHepMC.sh: $(top_builddir)/config.status $(srcdir)/testHepMC.sh.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+testFlow.sh: $(top_builddir)/config.status $(srcdir)/testFlow.sh.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 testMass.sh: $(top_builddir)/config.status $(srcdir)/testMass.sh.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 testStreamIO.sh: $(top_builddir)/config.status $(srcdir)/testStreamIO.sh.in
@@ -255,6 +266,9 @@ testHepMC$(EXEEXT): $(testHepMC_OBJECTS) $(testHepMC_DEPENDENCIES)
 testHepMCIteration$(EXEEXT): $(testHepMCIteration_OBJECTS) $(testHepMCIteration_DEPENDENCIES) 
 	@rm -f testHepMCIteration$(EXEEXT)
 	$(CXXLINK) $(testHepMCIteration_OBJECTS) $(testHepMCIteration_LDADD) $(LIBS)
+testFlow$(EXEEXT): $(testFlow_OBJECTS) $(testFlow_DEPENDENCIES) 
+	@rm -f testFlow$(EXEEXT)
+	$(CXXLINK) $(testFlow_OBJECTS) $(testFlow_LDADD) $(LIBS)
 testMass$(EXEEXT): $(testMass_OBJECTS) $(testMass_DEPENDENCIES) 
 	@rm -f testMass$(EXEEXT)
 	$(CXXLINK) $(testMass_OBJECTS) $(testMass_LDADD) $(LIBS)
@@ -283,6 +297,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testHepMC.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testHepMCIteration.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testHepMCMethods.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testFlow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testMass.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testMultipleCopies.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/testPrintBug.Po@am__quote@
