@@ -1,3 +1,10 @@
+
+2009-07-08  Lynn Garren
+
+	* HepMC/Flow.h: improve the syntax of the erase() method
+	* test/testFlow.cc: adding a test of the Flow class
+	see https://savannah.cern.ch/bugs/index.php?52240
+
   --------------------------  HepMC-2.05.00  --------------------------
 
 2009-05-19  Lynn Garren
